AX: aria-orientation is ignored on input[type="range"] https://bugs.webkit.org/show_bug.cgi?id=220222 <rdar://problem/72765547>

Reviewed by Zalan Bujtas.

Source/WebCore:

Check aria-orientation on range sliders.

Test: accessibility/mac/range-orientation.html

* accessibility/AccessibilitySlider.cpp:
(WebCore::AccessibilitySlider::orientation const):

LayoutTests:

* accessibility/mac/range-orientation.html: Added.


Canonical link: https://commits.webkit.org/232763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271166 268f45cc-cd09-0410-ab3c-d52691b4dbfc